# AI_EXP

./: .gitignore  DATA_GUIDE.md  QUICKSTART.md  README.md  main.py  plan.md  pyproject.toml  run_all.sh  task.md  test_environment.py
models/traditional/: baseline_nb.pkl  baseline_nb_results.json  baseline_svm.pkl  baseline_svm_results.json  combined_nb_5pct.pkl  combined_nb_5pct_results.json  combined_svm_10pct.pkl  combined_svm_10pct_results.json  combined_svm_1pct.pkl  combined_svm_1pct_results.json  combined_svm_5pct.pkl  combined_svm_5pct_results.json
src/: cut_csv.py  evaluate.py  prepare_imdb.py  prepare_tripadvisor.py  train_bert.py  train_traditional.py
