[project]
name = "ai-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.2",
    "datasets>=2.18.0",
    "pyarrow>=15.0.0",
    "lxml==4.9.3",
    "matplotlib==3.7.2",
    "numpy==1.24.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "seaborn==0.12.2",
    "tqdm==4.65.0",
]
